--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ h1{
 }
 
 h2{
-    color: #202d37;
+    color: #0F3057;
     font-weight: 700;
     font-size: 28px;
     margin-bottom: 14px;
@@ -107,7 +107,7 @@ input, select{
     padding: 14px 30px;
     background: #f5f8fa;
     border: 0;
-    border-bottom: 2px solid #7a93ab;
+    border-bottom: 2px solid #0F3057;
     outline: none;
 }
 input::placeholder {
